# Methods_Tools_Software

./: README.md
Assignment 1/: README.md
Assignment 1/Laboration_1/: README.md
Assignment 2/: CMakeLists.txt  README.md  main.cpp  screen.cpp  screen.h
Assignment 3/Assignment_3/include/: MathExpression.h
Assignment 3/Assignment_3/test/: test-calc.cpp
Assignments/: CMakelists.txt  README.md
Assignments/Assignment_2/: readme.md
Assignments/Assignment_2/include/: stack.h
Assignments/Assignment_3/: readme.md
Assignments/Assignment_3/src/: MathExpression.cpp
Assignments/Assignment_3/test/: CatchMain.cpp
Assignments/Docs/: Doxyfile  main_page.dox
Project/: CMakeLists.txt
Project/Docs/: Doxyfile  main_page.dox  member.dox
Project/include/Cell_Culture/: Cell.h
Project/include/GoL_Rules/: RuleOfExistence.h  RuleOfExistence_Conway.h  RuleOfExistence_Erik.h
Project/test/: test-cell.cpp  test-population.cpp
Project/test-GoL_Rules/: test-RuleFactory.cpp  test-RuleOfExistence_Conway.cpp  test-RuleOfExistence_Erik.cpp  test-RuleOfExistence_VonNeumann.cpp
